Fixed Layout on iPhone 6S

--- a/flex-layout-base-app/src/shared/components/navigation/navigation.component.scss
+++ b/flex-layout-base-app/src/shared/components/navigation/navigation.component.scss
@@ -55,7 +55,7 @@ button:focus {
             }
 
         .title {
-            padding-left: 1vh;
+            // padding-left: 1vh;
         }
 
         .exit {
